--- a/src/style.css
+++ b/src/style.css
@@ -13,13 +13,17 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  margin: 0px;
+}
+
+.content {
+  margin-top: 30px;
+}
+
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 h1 {
@@ -51,9 +55,7 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
